crates/semoxide-cli/src/snapshots/semoxide__render__tests__graphical_text_shows_the_line.snap
---
source: crates/semoxide-cli/src/render.rs
expression: graphical
---
]8;;https://github.com/semoxide/semoxide/blob/main/docs/errors/config/invalid-value.md\config::invalid_value (link)]8;;\

  × `tags.format` = "release": must contain `{version}`
   ╭─[semoxide.toml:2:10]
 1 │ [tags]
 2 │ format = "release"
   ·          ─────────
   ╰────
