crates/semoxide-cli/src/snapshots/semoxide__render__tests__graphical_text_with_help.snap
---
source: crates/semoxide-cli/src/render.rs
expression: "text(&NoGitRepo, TextStyle::Graphical { colors: Colors::Off })"
---
]8;;https://github.com/semoxide/semoxide/blob/main/docs/errors/core/no-git-repo.md\core::no_git_repo (link)]8;;\

  × not a git repository
  help: Run semoxide inside a git repository, or pass `--cwd`.
