crates/semoxide-cli/src/snapshots/semoxide__render__tests__graphical_text_without_help.snap
---
source: crates/semoxide-cli/src/render.rs
expression: "text(&PushTimedOut, TextStyle::Graphical { colors: Colors::Off })"
---
]8;;https://github.com/semoxide/semoxide/blob/main/docs/errors/git/push-timed-out.md\git::push_timed_out (link)]8;;\

  × push of `v1.2.0` to `origin` timed out
