crates/semoxide-cli/src/snapshots/semoxide__render__tests__json_with_help.snap
---
source: crates/semoxide-cli/src/render.rs
expression: "serde_json::to_string_pretty(&json(&NoGitRepo)).unwrap()"
---
{
  "schema_version": 1,
  "error": {
    "code": "core::no_git_repo",
    "message": "not a git repository",
    "help": "Run semoxide inside a git repository, or pass `--cwd`.",
    "url": "https://github.com/semoxide/semoxide/blob/main/docs/errors/core/no-git-repo.md",
    "retryable": false,
    "remote_writes_happened": false
  }
}
