crates/semoxide-cli/src/snapshots/semoxide__render__tests__json_without_help_omits_the_field.snap
---
source: crates/semoxide-cli/src/render.rs
expression: "serde_json::to_string_pretty(&json(&PushTimedOut)).unwrap()"
---
{
  "schema_version": 1,
  "error": {
    "code": "git::push_timed_out",
    "message": "push of `v1.2.0` to `origin` timed out",
    "url": "https://github.com/semoxide/semoxide/blob/main/docs/errors/git/push-timed-out.md",
    "retryable": true,
    "remote_writes_happened": true
  }
}
