crates/semoxide-cli/src/snapshots/semoxide__render__tests__plain_text_points_at_the_line.snap
---
source: crates/semoxide-cli/src/render.rs
expression: plain
---
error[config::invalid_value]: `tags.format` = "release": must contain `{version}`
  --> semoxide.toml:2:10
  docs: https://github.com/semoxide/semoxide/blob/main/docs/errors/config/invalid-value.md
