crates/semoxide-cli/src/snapshots/semoxide__render__tests__plain_text_points_at_the_whole_file.snap
---
source: crates/semoxide-cli/src/render.rs
expression: plain
---
error[config::unreadable]: `semoxide.toml`: Access is denied.
  --> semoxide.toml
  docs: https://github.com/semoxide/semoxide/blob/main/docs/errors/config/unreadable.md
