crates/semoxide-cli/src/snapshots/semoxide__render__tests__plain_text_with_help.snap
---
source: crates/semoxide-cli/src/render.rs
expression: "text(&NoGitRepo, TextStyle::Plain)"
---
error[core::no_git_repo]: not a git repository
  help: Run semoxide inside a git repository, or pass `--cwd`.
  docs: https://github.com/semoxide/semoxide/blob/main/docs/errors/core/no-git-repo.md
