crates/semoxide-cli/src/snapshots/semoxide__render__tests__plain_text_without_help.snap
---
source: crates/semoxide-cli/src/render.rs
expression: "text(&PushTimedOut, TextStyle::Plain)"
---
error[git::push_timed_out]: push of `v1.2.0` to `origin` timed out
  docs: https://github.com/semoxide/semoxide/blob/main/docs/errors/git/push-timed-out.md
